--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    <section class="flex flex-col justify-center items-center h-screen bg-blue-600 text-white">
+
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -116,4 +119,6 @@
     </section>
 
 </body>
+        <!-- Your content here -->
+</section>
 </html>
