--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
     <!-- Landing Section -->
     <section class="flex flex-col justify-center items-center min-h-[80vh] bg-blue-600 text-white px-4 text-center py-12">
         <img src="./assets/img/profile.jpg" alt="Profile Picture" class="w-32 h-auto rounded-full object-cover mb-6">
-        <h1 class="text-2xl sm:text-3xl md:text-5xl lg:text-6xl font-bold leading-tight">
-          Hi, I'm Muhammad Usman Mateen
-        </h1>
-        <p class="text-xs sm:text-sm md:text-lg lg:text-xl mt-4 max-w-sm md:max-w-lg mx-auto">
-          Building scalable and efficient software solutions with modern technologies.
-        </p>
-        <a href="your-cv-link.pdf" class="mt-6 px-6 py-3 bg-white text-blue-600 rounded-full text-sm md:text-base font-semibold hover:bg-gray-100 transition">
-          Download My CV
-        </a>
+        <h1 class="text-2xl sm:text-3xl md:text-5xl lg:text-6xl font-bold leading-tight break-words">
+            <span class="typewriter">Hi, I'm Muhammad Usman Mateen</span>
+          </h1>
+        <p class="text-xs sm:text-sm md:text-lg lg:text-xl mt-4 max-w-sm md:max-w-lg mx-auto break-words">
+            Building scalable and efficient software solutions with modern technologies.
+          </p>
+          <a href="your-cv-link.pdf" class="mt-6 px-6 py-3 bg-white text-blue-600 rounded-full text-sm md:text-base font-semibold hover:bg-gray-100 transition">
+            Download My CV
+          </a>
       </section>
       
       
